[gd_scene load_steps=8 format=2]

[ext_resource path="res://ball.gd" type="Script" id=1]
[ext_resource path="res://img/ball/ball.png" type="Texture" id=2]
[ext_resource path="res://img/poof.png" type="Texture" id=3]
[ext_resource path="res://sound/Upper Cut.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/Ball Bounce.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 6.0

[sub_resource type="Animation" id=2]

resource_name = "Poof"
length = 3.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.3, 1.8, 2.3, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_poof"
} ]
}

[node name="PlainBall" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause" ]
ball_speed = 200

[node name="collision" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="poof" type="Sprite" parent="." index="2"]

visible = false
texture = ExtResource( 3 )
hframes = 7
_sections_unfolded = [ "Animation", "Transform", "Z Index" ]

[node name="animate" type="AnimationPlayer" parent="poof" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 16.0
anims/Poof = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="AudioPoof" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = -2.5
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AudioBump" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = -1.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="hit" from="." to="." method="_on_PlainBall_hit"]


